--- a/0x09-react_redux_connectors_and_providers/task_0/dashboard/package.json
+++ b/0x09-react_redux_connectors_and_providers/task_0/dashboard/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-redux": "^9.1.2",
     "redux": "^4.0.5",
     "style-loader": "^2.0.0"
   },
